# hedera-zk-poc

methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs  main.rs
tests/: CommitmentVerification.t.sol
